--- a/media.html
+++ b/media.html
@@ -2,6 +2,10 @@
 <html lang="en">
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta charset="UTF-8">
+    <title>Jeremy Kleeman | Media</title>
+
+    <!-- Bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
 
@@ -10,8 +14,14 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=PT+Serif:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
 
+    <!-- AOS (Animate On Scroll) -->
+    <link rel="stylesheet" href="https://unpkg.com/aos@2.3.1/dist/aos.css" />
+
+    <!-- GLightbox -->
+    <link href="https://cdn.jsdelivr.net/npm/glightbox/dist/css/glightbox.min.css" rel="stylesheet">
+
+    <!-- Your Custom Styles -->
     <link href="styles.css" rel="stylesheet">
-    <title>Jeremy Kleeman | Media</title>
   </head>
 
   <body class="media-page">
@@ -66,100 +76,108 @@
     </section>
 
     <!-- MEDIA MOSAIC GALLERY -->
-<section class="media-mosaic py-5">
-  <div class="container">
-    <h2 class="media-section-title text-center mb-5">Gallery & Reviews</h2>
+    <section class="media-mosaic py-5">
+      <div class="container">
+        <h2 class="media-section-title text-center mb-5">Gallery & Reviews</h2>
 
-    <div class="mosaic-grid">
-      <!-- IMAGES (Lightbox enabled with data-gallery) -->
-      <div class="mosaic-item" data-aos="zoom-in">
-        <a href="images/opera1.jpg" class="glightbox" data-gallery="media-gallery" data-title="Opera Production 1">
-          <img src="images/opera1.jpg" alt="Opera production 1">
-        </a>
+        <div class="mosaic-grid">
+          <!-- IMAGES + REVIEW TILES -->
+          <div class="mosaic-item" data-aos="zoom-in">
+            <a href="images/opera1.jpg" class="glightbox" data-gallery="media-gallery" data-title="Opera Production 1">
+              <img src="images/opera1.jpg" alt="Opera production 1">
+            </a>
+          </div>
+
+          <div class="mosaic-item review-tile" data-aos="fade-up">
+            <blockquote>
+              “Kleeman’s voice exudes warmth and intelligence — a commanding presence.”
+              <footer>— The Sydney Morning Herald</footer>
+            </blockquote>
+          </div>
+
+          <div class="mosaic-item" data-aos="zoom-in" data-aos-delay="100">
+            <a href="images/opera2.jpg" class="glightbox" data-gallery="media-gallery" data-title="Opera Production 2">
+              <img src="images/opera2.jpg" alt="Opera production 2">
+            </a>
+          </div>
+
+          <div class="mosaic-item" data-aos="zoom-in" data-aos-delay="200">
+            <a href="images/opera3.jpg" class="glightbox" data-gallery="media-gallery" data-title="Opera Production 3">
+              <img src="images/opera3.jpg" alt="Opera production 3">
+            </a>
+          </div>
+
+          <div class="mosaic-item review-tile" data-aos="fade-up" data-aos-delay="300">
+            <blockquote>
+              “A masterclass in subtlety and precision — deeply moving.”
+              <footer>— Limelight Magazine</footer>
+            </blockquote>
+          </div>
+
+          <div class="mosaic-item" data-aos="zoom-in" data-aos-delay="400">
+            <a href="images/opera4.jpg" class="glightbox" data-gallery="media-gallery" data-title="Opera Production 4">
+              <img src="images/opera4.jpg" alt="Opera production 4">
+            </a>
+          </div>
+
+          <div class="mosaic-item" data-aos="zoom-in" data-aos-delay="500">
+            <a href="images/opera5.jpg" class="glightbox" data-gallery="media-gallery" data-title="Opera Production 5">
+              <img src="images/opera5.jpg" alt="Opera production 5">
+            </a>
+          </div>
+
+          <div class="mosaic-item review-tile" data-aos="fade-up" data-aos-delay="600">
+            <blockquote>
+              “Kleeman commands the stage with effortless musicality and psychological insight.”
+              <footer>— The Age</footer>
+            </blockquote>
+          </div>
+
+          <div class="mosaic-item" data-aos="zoom-in" data-aos-delay="700">
+            <a href="images/opera6.jpg" class="glightbox" data-gallery="media-gallery" data-title="Opera Production 6">
+              <img src="images/opera6.jpg" alt="Opera production 6">
+            </a>
+          </div>
+
+          <div class="mosaic-item" data-aos="zoom-in" data-aos-delay="800">
+            <a href="images/opera7.jpg" class="glightbox" data-gallery="media-gallery" data-title="Opera Production 7">
+              <img src="images/opera7.jpg" alt="Opera production 7">
+            </a>
+          </div>
+
+          <div class="mosaic-item" data-aos="zoom-in" data-aos-delay="900">
+            <a href="images/opera8.jpg" class="glightbox" data-gallery="media-gallery" data-title="Opera Production 8">
+              <img src="images/opera8.jpg" alt="Opera production 8">
+            </a>
+          </div>
+
+          <div class="mosaic-item" data-aos="zoom-in" data-aos-delay="1000">
+            <a href="images/opera9.jpg" class="glightbox" data-gallery="media-gallery" data-title="Opera Production 9">
+              <img src="images/opera9.jpg" alt="Opera production 9">
+            </a>
+          </div>
+        </div>
       </div>
+    </section>
 
-      <div class="mosaic-item review-tile" data-aos="fade-up">
-        <blockquote>
-          “Kleeman’s voice exudes warmth and intelligence — a commanding presence.”
-          <footer>— The Sydney Morning Herald</footer>
-        </blockquote>
-      </div>
-
-      <div class="mosaic-item" data-aos="zoom-in" data-aos-delay="100">
-        <a href="images/opera2.jpg" class="glightbox" data-gallery="media-gallery" data-title="Opera Production 2">
-          <img src="images/opera2.jpg" alt="Opera production 2">
-        </a>
-      </div>
-
-      <div class="mosaic-item" data-aos="zoom-in" data-aos-delay="200">
-        <a href="images/opera3.jpg" class="glightbox" data-gallery="media-gallery" data-title="Opera Production 3">
-          <img src="images/opera3.jpg" alt="Opera production 3">
-        </a>
-      </div>
-
-      <div class="mosaic-item review-tile" data-aos="fade-up" data-aos-delay="300">
-        <blockquote>
-          “A masterclass in subtlety and precision — deeply moving.”
-          <footer>— Limelight Magazine</footer>
-        </blockquote>
-      </div>
-
-      <div class="mosaic-item" data-aos="zoom-in" data-aos-delay="400">
-        <a href="images/opera4.jpg" class="glightbox" data-gallery="media-gallery" data-title="Opera Production 4">
-          <img src="images/opera4.jpg" alt="Opera production 4">
-        </a>
-      </div>
-
-      <div class="mosaic-item" data-aos="zoom-in" data-aos-delay="500">
-        <a href="images/opera5.jpg" class="glightbox" data-gallery="media-gallery" data-title="Opera Production 5">
-          <img src="images/opera5.jpg" alt="Opera production 5">
-        </a>
-      </div>
-
-      <div class="mosaic-item review-tile" data-aos="fade-up" data-aos-delay="600">
-        <blockquote>
-          “Kleeman commands the stage with effortless musicality and psychological insight.”
-          <footer>— The Age</footer>
-        </blockquote>
-      </div>
-
-      <div class="mosaic-item" data-aos="zoom-in" data-aos-delay="700">
-        <a href="images/opera6.jpg" class="glightbox" data-gallery="media-gallery" data-title="Opera Production 6">
-          <img src="images/opera6.jpg" alt="Opera production 6">
-        </a>
-      </div>
-
-      <div class="mosaic-item" data-aos="zoom-in" data-aos-delay="800">
-        <a href="images/opera7.jpg" class="glightbox" data-gallery="media-gallery" data-title="Opera Production 7">
-          <img src="images/opera7.jpg" alt="Opera production 7">
-        </a>
-      </div>
-
-      <div class="mosaic-item" data-aos="zoom-in" data-aos-delay="900">
-        <a href="images/opera8.jpg" class="glightbox" data-gallery="media-gallery" data-title="Opera Production 8">
-          <img src="images/opera8.jpg" alt="Opera production 8">
-        </a>
-      </div>
-
-      <div class="mosaic-item" data-aos="zoom-in" data-aos-delay="1000">
-        <a href="images/opera9.jpg" class="glightbox" data-gallery="media-gallery" data-title="Opera Production 9">
-          <img src="images/opera9.jpg" alt="Opera production 9">
-        </a>
-      </div>
-    </div>
-  </div>
-</section>
-
-<!-- LIGHTBOX SCRIPT -->
-<link href="https://cdn.jsdelivr.net/npm/glightbox/dist/css/glightbox.min.css" rel="stylesheet">
-<script src="https://cdn.jsdelivr.net/npm/glightbox/dist/js/glightbox.min.js"></script>
-<script>
-  const lightbox = GLightbox({
-    t
-
-
+    <!-- JS Libraries (load order is critical) -->
+    <script src="https://cdn.jsdelivr.net/npm/glightbox/dist/js/glightbox.min.js"></script>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
-    <script>AOS.init({ once: true, duration: 800 });</script>
+
+    <script>
+      document.addEventListener('DOMContentLoaded', () => {
+        // Initialize AOS
+        AOS.init({ once: true, duration: 800 });
+
+        // Initialize Lightbox
+        const lightbox = GLightbox({
+          touchNavigation: true,
+          loop: true,
+          zoomable: true,
+          closeOnOutsideClick: true,
+          plyr: { css: '', js: '' },
+        });
+      });
+    </script>
   </body>
 </html>
