--- a/media.html
+++ b/media.html
@@ -90,8 +90,9 @@
 
           <div class="mosaic-item review-tile" data-aos="fade-up">
             <blockquote>
-              “Kleeman’s voice exudes warmth and intelligence — a commanding presence.”
-              <footer>— The Sydney Morning Herald</footer>
+              “Kleeman’s dexterity and luscious tone command the listener’s attention. His depiction of
+the magician Magus is strong-willed, mystical, and masterfully executed”
+              <footer>— Cut Common Magazine on <i>Voyage to the Moon</i></footer>
             </blockquote>
           </div>
 
@@ -109,8 +110,8 @@
 
           <div class="mosaic-item review-tile" data-aos="fade-up" data-aos-delay="300">
             <blockquote>
-              “A masterclass in subtlety and precision — deeply moving.”
-              <footer>— Limelight Magazine</footer>
+              “The best of the four soloists was Jeremy Kleeman ... amply covering the bass range down to the lowest notes with ease and resonance, his aria making a great impact.”
+              <footer>— Bachtrack on <i>Stabat Mater</i>, New Zealand Symphony Orchestra</footer>
             </blockquote>
           </div>
 
