--- a/media.html
+++ b/media.html
@@ -90,8 +90,7 @@
 
           <div class="mosaic-item review-tile" data-aos="fade-up">
             <blockquote>
-              “Kleeman’s dexterity and luscious tone command the listener’s attention. His depiction of
-the magician Magus is strong-willed, mystical, and masterfully executed”
+              “Kleeman’s dexterity and luscious tone command the listener’s attention.”
               <footer>— Cut Common Magazine on <i>Voyage to the Moon</i></footer>
             </blockquote>
           </div>
@@ -110,7 +109,7 @@ the magician Magus is strong-willed, mystical, and masterfully executed”
 
           <div class="mosaic-item review-tile" data-aos="fade-up" data-aos-delay="300">
             <blockquote>
-              “The best of the four soloists was Jeremy Kleeman ... amply covering the bass range down to the lowest notes with ease and resonance, his aria making a great impact.”
+              “Amply covering the bass range down to the lowest notes with ease and resonance, his aria making a great impact.”
               <footer>— Bachtrack on <i>Stabat Mater</i>, New Zealand Symphony Orchestra</footer>
             </blockquote>
           </div>
@@ -129,8 +128,8 @@ the magician Magus is strong-willed, mystical, and masterfully executed”
 
           <div class="mosaic-item review-tile" data-aos="fade-up" data-aos-delay="600">
             <blockquote>
-              “Kleeman commands the stage with effortless musicality and psychological insight.”
-              <footer>— The Age</footer>
+              “Thrilling in its sense of command, the sheer volume of his rich bass-baritone arresting.”
+              <footer>— Classic Melbourne on <i>Messiah</i></footer>
             </blockquote>
           </div>
 
