--- a/media.html
+++ b/media.html
@@ -83,7 +83,7 @@
         <div class="mosaic-grid">
           <!-- IMAGES + REVIEW TILES -->
           <div class="mosaic-item" data-aos="zoom-in">
-            <a href="images/opera1.jpg" class="glightbox" data-gallery="media-gallery" data-title="Opera Production 1">
+            <a href="images/opera1.jpg" class="glightbox" data-gallery="media-gallery" data-title="Mr Jeffris in Oscar and Lucinda, Sydney Chamber Opera">
               <img src="images/opera1.jpg" alt="Opera production 1">
             </a>
           </div>
@@ -96,13 +96,13 @@
           </div>
 
           <div class="mosaic-item" data-aos="zoom-in" data-aos-delay="100">
-            <a href="images/opera2.jpg" class="glightbox" data-gallery="media-gallery" data-title="Opera Production 2">
+            <a href="images/opera2.jpg" class="glightbox" data-gallery="media-gallery" data-title="Toby Raven in Cloudstreet, State Opera of South Australia">
               <img src="images/opera2.jpg" alt="Opera production 2">
             </a>
           </div>
 
           <div class="mosaic-item" data-aos="zoom-in" data-aos-delay="200">
-            <a href="images/opera3.jpg" class="glightbox" data-gallery="media-gallery" data-title="Opera Production 3">
+            <a href="images/opera3.jpg" class="glightbox" data-gallery="media-gallery" data-title="Collatinus in The Rape of Lucretia, Sydney Chamber Opera">
               <img src="images/opera3.jpg" alt="Opera production 3">
             </a>
           </div>
@@ -115,13 +115,13 @@
           </div>
 
           <div class="mosaic-item" data-aos="zoom-in" data-aos-delay="400">
-            <a href="images/opera4.jpg" class="glightbox" data-gallery="media-gallery" data-title="Opera Production 4">
+            <a href="images/opera4.jpg" class="glightbox" data-gallery="media-gallery" data-title="Rapunzel's Prince in Into the Woods, Victorian Opera">
               <img src="images/opera4.jpg" alt="Opera production 4">
             </a>
           </div>
 
           <div class="mosaic-item" data-aos="zoom-in" data-aos-delay="500">
-            <a href="images/opera5.jpg" class="glightbox" data-gallery="media-gallery" data-title="Opera Production 5">
+            <a href="images/opera5.jpg" class="glightbox" data-gallery="media-gallery" data-title="Marquis D'Obiginy in La traviata, Victorian Opera">
               <img src="images/opera5.jpg" alt="Opera production 5">
             </a>
           </div>
@@ -134,25 +134,32 @@
           </div>
 
           <div class="mosaic-item" data-aos="zoom-in" data-aos-delay="700">
-            <a href="images/opera6.jpg" class="glightbox" data-gallery="media-gallery" data-title="Opera Production 6">
+            <a href="images/opera6.jpg" class="glightbox" data-gallery="media-gallery" data-title="Magus in Voyage to the Moon, Victorian Opera">
               <img src="images/opera6.jpg" alt="Opera production 6">
             </a>
           </div>
 
           <div class="mosaic-item" data-aos="zoom-in" data-aos-delay="800">
-            <a href="images/opera7.jpg" class="glightbox" data-gallery="media-gallery" data-title="Opera Production 7">
+            <a href="images/opera7.jpg" class="glightbox" data-gallery="media-gallery" data-title="Albert the Pudding in The Magic Pudding, Victorian Opera">
               <img src="images/opera7.jpg" alt="Opera production 7">
             </a>
           </div>
 
+          <div class="mosaic-item review-tile" data-aos="fade-up" data-aos-delay="600">
+            <blockquote>
+              “Kleeman dominates the opera, creating a powerful, multi-dimensional character.”
+              <footer>— Australian Book Review on <i>Gilgamesh</i></footer>
+            </blockquote>
+          </div>
+
           <div class="mosaic-item" data-aos="zoom-in" data-aos-delay="900">
-            <a href="images/opera8.jpg" class="glightbox" data-gallery="media-gallery" data-title="Opera Production 8">
+            <a href="images/opera8.jpg" class="glightbox" data-gallery="media-gallery" data-title="Teobaldo in Faramondo, Brisbane Baroque Festival">
               <img src="images/opera8.jpg" alt="Opera production 8">
             </a>
           </div>
 
           <div class="mosaic-item" data-aos="zoom-in" data-aos-delay="1000">
-            <a href="images/opera9.jpg" class="glightbox" data-gallery="media-gallery" data-title="Opera Production 9">
+            <a href="images/opera9.jpg" class="glightbox" data-gallery="media-gallery" data-title="Figaro in The Marriage of Figaro, Opera Australia">
               <img src="images/opera9.jpg" alt="Opera production 9">
             </a>
           </div>
