--- a/media.html
+++ b/media.html
@@ -82,7 +82,7 @@
 
         <div class="mosaic-grid">
           <!-- IMAGES + REVIEW TILES -->
-          <div class="mosaic-item" data-aos="zoom-in">
+          <div class="mosaic-item large" data-aos="zoom-in">
             <a href="images/opera1.jpg" class="glightbox" data-gallery="media-gallery" data-title="Mr Jeffris in Oscar and Lucinda, Sydney Chamber Opera">
               <img src="images/opera1.jpg" alt="Opera production 1">
             </a>
@@ -95,7 +95,20 @@
             </blockquote>
           </div>
 
-          <div class="mosaic-item" data-aos="zoom-in" data-aos-delay="100">
+          <div class="mosaic-item portrait" data-aos="zoom-in" data-aos-delay="1000">
+            <a href="images/opera9.jpg" class="glightbox" data-gallery="media-gallery" data-title="Figaro in The Marriage of Figaro, Opera Australia">
+              <img src="images/opera9.jpg" alt="Opera production 9">
+            </a>
+          </div>
+          
+          <div class="mosaic-item review-tile" data-aos="fade-up" data-aos-delay="600">
+            <blockquote>
+              “Thrilling in its sense of command, the sheer volume of his rich bass-baritone arresting.”
+              <footer>— Classic Melbourne on <i>Messiah</i></footer>
+            </blockquote>
+          </div>
+
+          <div class="mosaic-item landscape" data-aos="zoom-in" data-aos-delay="100">
             <a href="images/opera2.jpg" class="glightbox" data-gallery="media-gallery" data-title="Toby Raven in Cloudstreet, State Opera of South Australia">
               <img src="images/opera2.jpg" alt="Opera production 2">
             </a>
@@ -126,12 +139,7 @@
             </a>
           </div>
 
-          <div class="mosaic-item review-tile" data-aos="fade-up" data-aos-delay="600">
-            <blockquote>
-              “Thrilling in its sense of command, the sheer volume of his rich bass-baritone arresting.”
-              <footer>— Classic Melbourne on <i>Messiah</i></footer>
-            </blockquote>
-          </div>
+
 
           <div class="mosaic-item" data-aos="zoom-in" data-aos-delay="700">
             <a href="images/opera6.jpg" class="glightbox" data-gallery="media-gallery" data-title="Magus in Voyage to the Moon, Victorian Opera">
@@ -158,11 +166,7 @@
             </a>
           </div>
 
-          <div class="mosaic-item" data-aos="zoom-in" data-aos-delay="1000">
-            <a href="images/opera9.jpg" class="glightbox" data-gallery="media-gallery" data-title="Figaro in The Marriage of Figaro, Opera Australia">
-              <img src="images/opera9.jpg" alt="Opera production 9">
-            </a>
-          </div>
+          
         </div>
       </div>
     </section>
