--- a/media.html
+++ b/media.html
@@ -101,6 +101,12 @@
             </a>
           </div>
 
+                     <div class="mosaic-item portrait" data-aos="zoom-in" data-aos-delay="200">
+            <a href="images/opera3.jpg" class="glightbox" data-gallery="media-gallery" data-title="Collatinus in The Rape of Lucretia, Sydney Chamber Opera">
+              <img src="images/opera3.jpg" alt="Opera production 3">
+            </a>
+          </div>
+
           <div class="mosaic-item review-tile" data-aos="fade-up" data-aos-delay="600">
             <blockquote>
               “Thrilling in its sense of command, the sheer volume of his rich bass-baritone arresting.”
