--- a/media.html
+++ b/media.html
@@ -91,7 +91,7 @@
           <div class="mosaic-item review-tile" data-aos="fade-up">
             <blockquote>
               “Kleeman’s dexterity and luscious tone command the listener’s attention.”
-              <footer>— Cut Common Magazine on <i>Voyage to the Moon</i></footer>
+              <footer>— Cut Common Magazine</footer>
             </blockquote>
           </div>
 
@@ -116,7 +116,7 @@
           <div class="mosaic-item review-tile" data-aos="fade-up" data-aos-delay="600">
             <blockquote>
               “Thrilling in its sense of command, the sheer volume of his rich bass-baritone arresting.”
-              <footer>— Classic Melbourne on <i>Messiah</i></footer>
+              <footer>— Classic Melbourne</footer>
             </blockquote>
           </div>
         
@@ -135,8 +135,8 @@
           
           <div class="mosaic-item review-tile" data-aos="fade-up" data-aos-delay="300">
             <blockquote>
-              “Amply covering the bass range down to the lowest notes with ease and resonance, his aria making a great impact.”
-              <footer>— Bachtrack on <i>Stabat Mater</i>, New Zealand Symphony Orchestra</footer>
+              “Amply covering the bass range down to the lowest notes with ease and resonance, making a great impact.”
+              <footer>— Bachtrack</footer>
             </blockquote>
           </div>
 
@@ -155,7 +155,7 @@
           <div class="mosaic-item review-tile" data-aos="fade-up" data-aos-delay="600">
             <blockquote>
               “Kleeman dominates the opera, creating a powerful, multi-dimensional character.”
-              <footer>— Australian Book Review on <i>Gilgamesh</i></footer>
+              <footer>— Australian Book Review</footer>
             </blockquote>
           </div>
 
