--- a/biography.html
+++ b/biography.html
@@ -17,7 +17,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=PT+Serif:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
 </head>
-<body>
+<body class="bio-page">
 
 <!-- ==================== NAVBAR ==================== -->
 <nav class="navbar navbar-expand-md navbar-dark">
@@ -43,7 +43,15 @@
   </div>
 </nav>
 
-<!-- BIO HERO SECTION -->
+<!-- ==================== BIO HERO SECTION ==================== -->
+<section class="bio-hero text-center">
+  <div class="container">
+    <h1 class="display-4 fw-bold mb-3">Biography</h1>
+    <p class="lead" style="color:#c8d0e0;">Career highlights, education, and artistic journey</p>
+  </div>
+</section>
+
+<!-- ==================== BIO CONTENT ==================== -->
 <div class="container my-5">
   <div class="bio-grid">
     
