--- a/biography.html
+++ b/biography.html
@@ -44,12 +44,13 @@
 </nav>
 
 <!-- ==================== BIO HERO SECTION ==================== -->
-<section class="bio-hero text-center">
+<section class="page-hero">
   <div class="container">
-    <h1 class="display-4 fw-bold mb-3">Biography</h1>
-    <p class="lead" style="color:#c8d0e0;">Career highlights, education, and artistic journey</p>
+    <h1 class="page-section-title mb-3">Biography</h1>
+    <p class="lead">Career highlights, education, and artistic journey</p>
   </div>
 </section>
+
 
 <!-- ==================== BIO CONTENT ==================== -->
 <div class="container my-5">
