--- a/biography.html
+++ b/biography.html
@@ -46,8 +46,8 @@
 <!-- ==================== BIO HERO SECTION ==================== -->
 <section class="page-hero">
   <div class="container">
-    <h1 class="page-section-title mb-3">Biography</h1>
-    <p class="lead">Career highlights, education, and artistic journey</p>
+    <h1 class="page-section-title mb-3">biography</h1>
+    <p class="lead">career highlights, education, and artistic journey</p>
   </div>
 </section>
 
