--- a/contact.html
+++ b/contact.html
@@ -43,6 +43,14 @@
   </div>
 </nav>
 
+<section class="page-hero">
+  <div class="container">
+    <h1 class="page-section-title mb-3">Contact</h1>
+    <p class="lead"></p>
+  </div>
+</section>
+
+
 <!-- ==================== CONTACT CONTENT ==================== -->
 <div class="container my-5">
   <div class="row justify-content-center">
