--- a/performances.html
+++ b/performances.html
@@ -50,6 +50,14 @@
   </div>
 </nav>
 
+<section class="page-hero">
+  <div class="container">
+    <h1 class="page-section-title mb-3">Performances</h1>
+    <p class="lead">Upcoming and Recent</p>
+  </div>
+</section>
+
+
 
 <!-- ==================== UPCOMING ==================== -->
 <div class="container my-5 sitetext">
