--- a/index.html
+++ b/index.html
@@ -46,6 +46,14 @@
   </div>
 </nav>
 
+<section class="page-hero">
+  <div class="container">
+    <h1 class="page-section-title mb-3">Jeremy Kleeman - Bass Baritone</h1>
+    <p class="lead">Opera and Concert Singer</p>
+  </div>
+</section>
+
+
 <!-- ==================== HERO CAROUSEL — RANDOM ==================== -->
 <div class="hero-carousel-container">
   <div id="reviewCarousel" class="carousel slide" data-bs-ride="carousel" data-bs-interval="5000">
