--- a/index.html
+++ b/index.html
@@ -46,12 +46,12 @@
   </div>
 </nav>
 
-<section class="page-hero">
+<!--<section class="page-hero">
   <div class="container">
-    <h1 class="page-section-title mb-3">Jeremy Kleeman - Bass Baritone</h1>
+    <h1 class="page-section-title mb-3">Jeremy Kleeman</h1>
     <p class="lead">Opera and Concert Singer</p>
   </div>
-</section>
+</section>-->
 
 
 <!-- ==================== HERO CAROUSEL — RANDOM ==================== -->
