--- a/contact.html
+++ b/contact.html
@@ -43,12 +43,12 @@
   </div>
 </nav>
 
-<section class="page-hero">
+<!--<section class="page-hero">
   <div class="container">
     <h1 class="page-section-title mb-3">Contact</h1>
     <p class="lead"></p>
   </div>
-</section>
+</section>-->
 
 
 <!-- ==================== CONTACT CONTENT ==================== -->
