--- a/media.html
+++ b/media.html
@@ -51,12 +51,12 @@
     </nav>
 
     <!-- HERO -->
-    <section class="media-hero text-center">
+     <!--<section class="media-hero text-center">
       <div class="container">
         <h1 class="display-4 fw-bold mb-3">Media</h1>
         <p class="lead" style="color:#c8d0e0;">Highlights, performances, and press coverage</p>
       </div>
-    </section>
+    </section>-->
 
     <!-- VIDEOS -->
     <section class="media-section container py-5">
