--- a/biography.html
+++ b/biography.html
@@ -44,12 +44,12 @@
 </nav>
 
 <!-- ==================== BIO HERO SECTION ==================== -->
-<section class="page-hero">
+<!--<section class="page-hero">
   <div class="container">
     <h1 class="page-section-title mb-3">biography</h1>
     <p class="lead">career highlights, education, and artistic journey</p>
   </div>
-</section>
+</section>-->
 
 
 <!-- ==================== BIO CONTENT ==================== -->
