--- a/performances.html
+++ b/performances.html
@@ -61,7 +61,8 @@
 
 <!-- ==================== UPCOMING ==================== -->
 <div class="container my-5 sitetext">
-  <h2 class="text-center mb-5 text-white section-title">Upcoming</h2>
+  <!--<h2 class="text-center mb-5 text-white section-title">Upcoming</h2>-->
+  <h2 class="media-section-title mb-4">Upcoming</h2>
 
   <div class="row row-cols-1 row-cols-md-2 g-5 justify-content-center">
 
@@ -115,7 +116,8 @@
   <div class="section-divider"></div>
 
   <!-- ==================== RECENT ==================== -->
-  <h2 class="text-center mb-5 text-white section-title">Recent</h2>
+  <!--<h2 class="text-center mb-5 text-white section-title">Recent</h2>-->
+  <h2 class="media-section-title mb-4">Recent</h2>
 
   <div class="row row-cols-1 row-cols-md-2 g-5 justify-content-center">
 
