--- a/performances.html
+++ b/performances.html
@@ -60,11 +60,11 @@
 
 
 <!-- ==================== UPCOMING ==================== -->
-<div class="container my-5 sitetext">
+<div class="container my-5">
   <!--<h2 class="text-center mb-5 text-white section-title">Upcoming</h2>-->
   <h2 class="media-section media-section-title mb-4">Upcoming</h2>
 
-  <div class="row row-cols-1 row-cols-md-2 g-5 justify-content-center">
+  <div class="sitetext row row-cols-1 row-cols-md-2 g-5 justify-content-center">
 
     <!-- Performance 1 -->
     <div class="col">
@@ -119,7 +119,7 @@
   <!--<h2 class="text-center mb-5 text-white section-title">Recent</h2>-->
   <h2 class="media-section media-section-title mb-4">Recent</h2>
 
-  <div class="row row-cols-1 row-cols-md-2 g-5 justify-content-center">
+  <div class="sitetext row row-cols-1 row-cols-md-2 g-5 justify-content-center">
 
     <!-- Performance 1 -->
     <div class="col">
